# scones-ie

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  configuration.yaml  fly.toml  setsecrets.sh  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: deploy.yml  rust.yml
infastructure/: main.tf
migrations/2024-02-17-051240_toggles/: down.sql  up.sql
migrations/2024-02-22-020844_create_clients/: up.sql
migrations/2024-02-22-023325_redirect_uris/: down.sql  up.sql
scripts/: init_db.sh
src/: configuration.rs  database.rs  github.rs  handlers.rs  lib.rs  main.rs  models.rs  relme.rs  schema.rs
static/: index.html  login.html  success.html
static/admin/: config.yml  index.html
static/darren/: index.html
static/login/: index.html
static/success/: index.html
tests/: healthcheck.rs  test_lib.rs  test_relme.rs
