[package]
name = "scones"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }

axum = { version = "0.7.5", features = ["multipart"] }
hyper = "1.3.1"
console-subscriber = "0.3.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["registry", "std"] }
clap = { version = "4.5.4", features = ["derive"] }

# I dont want to bring openssl in
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }

http = "1.1.0"
url = "2.5.1"
serde_json = "1.0"
html_parser = "0.7.0"

deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
config = "0.14.0"
rustls = "0.23.9"

[dev-dependencies]
